@@ -1,6 +1,7 @@
 0.14.13
 	new feature: SSV format for RS import
 	new feature: complex VLAN IDs in switchvlans gateway
+	new feature: automatic option groups
 	update: added Force10, NETGEAR, D-Link and Extreme Networks switches,
 		Raisecom MUXes, updated Cisco routers
 	update: async port type has been split
